feat: 래빗엠큐 도입